bugfix: graphic timer disabled on small screens.

--- a/styles/clock.less
+++ b/styles/clock.less
@@ -46,7 +46,7 @@
     height: auto;
     float: right;
 
-    div {
+    svg {
       display: none !important;
     }
 
